# mujoco

./: BUILD_CONFIGURATION.md  CMakeLists.txt  build_commands_log.txt  build_mujoco_with_filament.sh  test_filament_3d_asset.py  test_filament_python_simple.py
python/: setup.py
python/mujoco/: CMakeLists.txt
src/experimental/filament/: CMakeLists.txt  render_context_filament.cc  stubs.cc
src/experimental/filament/assets/: pbr_simple.mat
src/experimental/filament/filament/: drawable.cc  filament_context.cc  material.cc  model_util.cc  object_manager.cc  renderables.cc
src/render/: CMakeLists.txt
